# Fast-share-qr

./: Cargo.toml  README.md
src/: main.rs
