[package]
name = "fast-share-qr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
local_ipaddress = "0.1.3"
portpicker = "0.1.1"
qrcode = "0.12.0"
tokio = { version = "1.21.1", features = ["full"] }
urlencoding = "2.1.2"
warp = "0.3.3"
